<resources>

    <string name="app_name">Movies App</string>
    <string name="category_activity"> Category </string>
    <string name="movie_category">Category</string>
    <string name="movie_classification">Classification</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_releases">New Releases</string>

    <string name="button_contact">Contact Support</string>

    <!-- welcome messages -->
    <string name="act_welcome_msg_category"> Welcome to MoviesApp - Categories</string>
    <string name="act_welcome_msg_classification"> Welcome to MoviesApp - Classification</string>
    <string name="act_welcome_msg_rating"> Welcome to MoviesApp - Rating</string>
    <string name="act_welcome_msg_release"> Welcome to MoviesApp - New Releases</string>

    <string name="class_text_view_click"> Yaaay! it worked. </string>
    <string name="image_view_description">Movie and Popcorn</string>


    <!-- Strings for the Login Activity -->
    <string name="act_login_msg">Login / SignUp</string>
    <string name="edit_text_user">Email or ID</string>
    <string name="edit_text_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_view_or">OR</string>
    <string name="btn_create_user">Sign Up</string>
    
    <!-- Strings for error message -->
    <string name="msg_user_not_found">User Not Found. Please sign up</string>
    <string name="msg_pass_wrong">Please, try again. Wrong password</string>

    <!-- Strings for activity labels -->
    <string name="activity_label_details_movie"> Movie Details </string>
    <string name="activity_label_success_login"> User Profile </string>

    <string name="user_first"> First </string>
    <string name="user_last"> Last </string>
    <string name="user_id"> Username </string>
    <string name="user_birthday"> Birth </string>
    <string name="user_phone"> Phone </string>
    <string name="user_email"> Email </string>
    <string name="user_pass"> Password </string>
    <string name="btn_new_user"> Create New User </string>

    <string name="suc_info"> User Info</string>
    <string name="suc_user"> username</string>
    <string name="suc_pass"> pass </string>
</resources>
