<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/movie_category"
        style="@style/category_style"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/movie_category"
        android:text="@string/movie_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_classification"
        style="@style/category_style"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/movie_classification"
        android:text="@string/movie_classification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

    <TextView
        android:id="@+id/movie_year"
        style="@style/category_style"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/movie_rating"
        android:text="@string/movie_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_category" />

    <TextView
        android:id="@+id/movie_rating"
        style="@style/category_style"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/movie_year"
        android:text="@string/movie_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_year" />

</android.support.constraint.ConstraintLayout>